feat: back: 진행 중인 전시 조회